traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:2: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    if ((getX()!=6) && (getY()!=6)){return true}
                                           ^TraversalByColumn:2: warning: enclosing method test has result type Unit: return value discarded
    if ((getX()!=6) && (getY()!=6)){return true}
                                    ^TraversalByColumn:3: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    else{return false}
                ^TraversalByColumn:3: warning: enclosing method test has result type Unit: return value discarded
    else{return false}
         ^TraversalByColumn:10: error: value unary_! is not a member of Unit
    while (!test()){
           ^